--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "author": "martim00 (martim00@gmail.com)",
   "description": "Webpack loader for Python",
   "files": [
-    "index.js"
+    "index.js",
+    "importlab_tree.py"
   ],
   "dependencies": {
     "extend": "^3.0.1",
